--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Link Generator</h1>
-        <input type="text" id="linkInput" placeholder="Enter a link (e.g., www.google.com)">
-        <button id="generateButton">Generate</button>
+        <h1>MR Link:</h1>
+        <input type="text" id="linkInput" placeholder="Enter your MR link (avoid 'https://')">
+        <button id="generateButton">Generate Link</button>
     </div>
     <script src="scripts/main.js"></script>
 </body>
