--- a/src/quotes/3.html
+++ b/src/quotes/3.html
@@ -7,6 +7,7 @@
     <style>
         body {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -23,11 +24,26 @@
             font-weight: bold;
             filter: invert(1) drop-shadow(2px 2px 8px #f1eaea);
             text-align: center;
-        }   
+        }
+        .loader {
+            margin-top: 30px;
+            border: 8px solid #f3f3f3;
+            border-top: 8px solid #222;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            animation: spin 1s linear infinite;
+            filter: invert(1);
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg);}
+            100% { transform: rotate(360deg);}
+        }
     </style>
 </head>
 <body>
     <p id="typing-text"></p>
+    <div class="loader"></div>
     <script>
     const lines = [
         "In a world where time was scarce...",
