--- a/src/generate.html
+++ b/src/generate.html
@@ -15,6 +15,8 @@
             'quotes/1.html',
             'quotes/2.html',
             'quotes/3.html',
+            'quotes/4.html',
+            'quotes/5.html',
             // Add more files as needed
         ];
 
