skip button added

--- a/src/generate.html
+++ b/src/generate.html
@@ -39,5 +39,7 @@
             document.body.innerHTML = '<h2>No link provided!</h2>';
         }
     </script>
+    <button id="skipBtn">Skip</button>
+    <script src="scripts/generate.js"></script>
 </body>
 </html>
